<resources>
    <string name="app_name">MailChat</string>
    <string name="send_message">Send</string>
    <string name="title_chatthread_list">Contacts</string>
    <string name="title_chatthread_detail">Chat History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_share_contact">Share Contact</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <!--<string name="pref_header_general">General</string>-->

    <string name="pref_title_help">Welcome to Mailchat</string>
    <string name="pref_default_help">
        Mailchat is a revolutionary chat app that uses your e-mail for chatting.
        Your contacts receive your messages in their inbox, or in the Mailchat app.
        Your passwords are stored encrypted with a locally generated cryptographic key.
    </string>

    <!-- <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
         based on your message history
     </string>
 -->
    <string name="pref_title_display_name">Display name</string>

    <string name="pref_title_email">E-mail address</string>
    <string name="pref_default_email">john@smith.name</string>

    <string name="pref_title_smtp_server">SMTP server</string>

    <string name="pref_title_smtp_username">SMTP username</string>

    <string name="pref_title_smtp_password">SMTP password</string>

    <string name="pref_title_imap_server">IMAP server</string>

    <string name="pref_title_imap_username">IMAP username</string>

    <string name="pref_title_imap_password">IMAP password</string>

    <string name="pref_title_security">Security protocol</string>
    <string-array name="pref_example_list_titles">
        <item>STARTTLS/TLS</item>
        <item>SSL</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
<!--
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

-->
    <!--<string-array name="multi_select_list_preference_default_value" />-->

    <!--<string name="pref_title_system_sync_settings">System sync settings</string>-->

    <!-- Example settings for Notifications -->
    <!--<string name="pref_header_notifications">Notifications</string>-->

    <!--<string name="pref_title_new_message_notifications">New message notifications</string>-->

    <!--<string name="pref_title_ringtone">Ringtone</string>-->
    <string name="pref_ringtone_silent">Silent</string>
    <string name="ok">OK</string>
    <string name="enter_email">Add e-mail contact</string>
    <string name="qr_code">QR code</string>
    <string name="add_contact">Add contact</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>

    <!--<string name="pref_title_vibrate">Vibrate</string>-->
</resources>
