<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="io.enuma.app.keystoretest.ChatThreadDetailActivity"
    >

    <LinearLayout
        style="@style/AppTheme.MessageBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        >

        <EditText
            android:id="@+id/share_contact_email"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft ="5dp"
            android:layout_marginEnd  ="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:hint="@string/enter_email"
            />

        <Button
            android:id="@+id/share_contact_ok"
            android:text="@string/ok"
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_rect_shape_send"
            android:onClick="setContentView"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <ImageView
            android:contentDescription="@string/qr_code"
            android:id="@+id/qrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <ImageView
            android:id="@+id/share_contact_avatar"
            android:layout_margin="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/share_contact_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/share_contact_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
